--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -13,8 +13,12 @@
             $(function () {
                 $(".revise").click(function(){
                     var id = $(this).attr("id");
-                    var content = $(#question_content+id).val();
-                    console.log(content);
+                    console.log(id);
+                    var content = $('#question_content'+id).html();
+
+                    var contentID = "question_content"+id;
+                    console.log(contentID);
+                    $('#'+contentID).replaceWith("<textarea>"+content+"</textarea>");
                 });
             });
         </script>
@@ -29,7 +33,8 @@
         <form action="{% url 'QnA' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <textarea class="question" name="question" rows="10" cols="50" placeholder="질문을 입력해주세요."></textarea><br>
-            <input type="file" name="question_file" style="color : #E18A07; font-size: small;">
+            <input type="file" name="question_file" style="color : #E18A07; font-size: small;" multiple>
+            <output id="list"></output>
             <input class="button" type="submit" value="등록">
         </form>
     </div>
@@ -38,7 +43,7 @@
         <form action="{% url 'refresh' %}" method="post">
             <div id="{{ question.id }}" class="answer_form">
                 <a style="background-color: rgb(216, 216, 216);">{{ question.asker }} / {{ question.pub_date }}</a>
-                <div id="question_content+{{ question.id }}">{{ question.question_content }}</div>
+                <div id="question_content{{ question.id }}">{{ question.question_content }}</div>
                 {% if question.asker == user %}
                     <div name="revise">
                         <button type="button" id="{{ question.id }}" class="button revise" value="수정">수정</button>
