--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -12,14 +12,15 @@
         <script type="text/javascript">
             $(document).ready(function () {
                 {% if top %}
-                    $('html').animate({scrollTop : 20 }, 400);
+                    $('html').animate({scrollTop : {{ top }} }, 400);
                 {% endif %}
             })
 
             $(document).on('click', '.revise', function () {
                 var id = $(this).attr("id");
                 var content = $('#question_content'+id).html();
-                var top = $('#question_content'+id).scrollTop();
+                var top = $('#question_content'+id).position().top;
+                console.log(top);
 
                 $('#question_content'+id).replaceWith('<textarea name="revise" id="textarea'+id+'">'+content+'</textarea>');
                 $('#buttonpanel'+id).html('<button type="button" id="'+id+'" class="button cancel" value="취소">취소</button>\n' +
@@ -61,7 +62,7 @@
     <h1 style="text-align: center;">Question & Answer</h1>
     <div class="question_form">
         <h5>{{ user.name }}<a style="font-size: small; color:#E18A07">님의 질문</a></h5>
-        <form action="{% url 'QnA' %}" method="post" enctype="multipart/form-data">
+        <form action="{% url 'newQuestion' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <textarea class="question" name="question" rows="10" cols="50" placeholder="질문을 입력해주세요."></textarea><br>
             <input type="file" name="question_file" style="color : #E18A07; font-size: small;" multiple>
@@ -72,9 +73,8 @@
 
     {% for question in questions.all reversed %}
         <div id="{{ question.id }}" class="answer_form">
-            <form action="{% url 'refresh' %}" method="post">
+            <form action="{% url 'QnA' %}" method="post">
                 {% csrf_token %}
-                <input type="hidden" name="val" value="revise"/>
                 <input type="hidden" name="id" value="{{ question.id }}"/>
 
                 <a style="background-color: rgb(216, 216, 216);">{{ question.asker }} / {{ question.pub_date }}</a>
