--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -1,87 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
-@-webkit-keyframes typing { from { width: 0; } }
-@-webkit-keyframes blink-caret { 50% { border-color: transparent; } }
-
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
 body{
-    background-color: white;
-    color: black;
+    background-color: #F2F2F2;
+    font-family: 'Nanum Gothic Coding', monospace;
 }
-
 h1{
-    color : #E18A07;
-    font-family: 'Balsamiq Sans', cursive;
+    color : #5653A6;
+    font-family: 'Black Han Sans', sans-serif;
+    margin-top: 30px;
+    margin-bottom: 30px;
     font-size: 50px;
-    text-shadow: 2px 2px 4px #e2a113;
-    text-decoration: underline;
-    margin-top: 10px;
-    border-right: .1em solid black;
-	width: 17ch;
-	white-space: nowrap;
-	overflow: hidden;
-	-webkit-animation: typing 3s steps(14, end),
-	           blink-caret .5s step-end infinite alternate;
-               
+}
+h3,h4{
+    font-family: 'Black Han Sans', sans-serif;
+}
+div.entire {
+    width: 100%;
+    height: 100%;
+    font-family: 'Nanum Gothic Coding', monospace;
 }
 
 div.question_form{
-    margin-left: calc(100%/2.5);
-    margin-top: 70px;
-    font-family: 'Noto Sans KR', sans-serif;
-
-}
-
-div{
-    font-family: 'Noto Sans KR', sans-serif;
+    width: 48%;
+    float: left;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    font-family: 'Nanum Gothic Coding', monospace;
 }
 
 div.answer_form{
-    margin-left: calc(100%/2.5);
-    margin-top: 20px;
-    width: 350px;
-    border-top: #222 2px solid;
-}
-
-textarea.question{
-    border: #E18A07 2px solid ;
-    background-color: rgb(248, 214, 163);
-    color: black;
-    font-size: small;
-    box-shadow: 5px 5px 5px rgb(134, 83, 5);
-}
-
-textarea.answer{
-
+    width: 50%;
+    float: right;
+    margin-right: 10px;
+    margin-top: 30px;
+    border: rgb(223, 213, 209) 2px solid;
+    font-family: 'Nanum Gothic Coding', monospace;
 }
 
 input.button{
-    transition:all .3s ease-out; 
-    border: rgb(245, 158, 28) 2px solid ;
-    background-color: rgb(245, 158, 28);
-    border-radius: 15px;
-    box-shadow:
-    1px 1px 0 0 #d98e20,
-    2px 2px 0 0 #d98e20;
-
-
+    font-weight: bold;
+    font-family: 'Nanum Gothic Coding', monospace;
 }
-
-input.button:hover{
-        color:rgb(255, 255, 255);
+a.user_name{
+    font-family: 'Nanum Gothic Coding', monospace;
 }
-input.button.activate{
-        color:#222;
-        box-shadow:inset 0 -4px 0 0 rgba(0,0,0,.2),
-          1px 1px 0 0 #d98e20,
-          2px 2px 0 0 #d98e20,
-          3px 3px 0 0 #d98e20,
-          4px 4px 0 0 #d98e20,
-          5px 5px 0 0 #d98e20;
-}
-
-textarea::-webkit-input-placeholder{
-    color:rgba(0, 0, 0, 0.288);
-    font-size: small;
-}
-
-
