--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -59,26 +59,29 @@
 
 {% block content%}
     <body>
-    <h1 style="text-align: center;">Question & Answer</h1>
-    <div class="question_form">
-        <h5>{{ user.name }}<a style="font-size: small; color:#E18A07">님의 질문</a></h5>
-        <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <textarea class="question" name="question" rows="10" cols="50" placeholder="질문을 입력해주세요."></textarea><br>
-            <input type="file" name="question_file" style="color : #E18A07; font-size: small;" multiple>
-            <output id="list"></output>
-            <input class="button" type="submit" value="등록">
-        </form>
-    </div>
+    <h1 style="text-align: center; text-shadow: 4px 2px 2px rgb(172, 171, 171); ">QUESTION <a style="color:#82BF45">&</a> ANSWER</h1>
+    <div class="entire">
+        <div class="question_form">
+            <h3 style="color: #D95829; text-align: center;">QUESTION</h3>
+            <h5><a class="user_name">{{ user.name }}</a><a style="color:rgb(236, 155, 3); font-size:medium; font-weight: bold;">님의 질문</a></h5>
+            <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <textarea class="question" name="question" rows="10" cols="80" placeholder="질문을 입력해주세요."></textarea><br>
+                <input type="file" name="question_file" style="color : rgb(236, 155, 3); font-size: small; font-weight: bold" multiple>
+                <output id="list"></output>
+                <input style="font-weight: bold" class="button" type="submit" value="등록">
+            </form>
+        </div>
 
-    {% for question in questions.all reversed %}
+        {% for question in questions.all reversed %}
         <div id="{{ question.id }}" class="answer_form">
+            <h4 style="color: #D95829;">ANSWER</h4>
             <form action="{% url 'QnA' %}" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="id" value="{{ question.id }}"/>
-
-                <a style="background-color: rgb(216, 216, 216);">{{ question.asker }} / {{ question.pub_date }}</a>
-                <div id="question_content{{ question.id }}">{{ question.question_content }}</div>
+                <a style="color : #5653A6; font-weight:bold ;">{{ question.asker }} / {{ question.pub_date }}</a>
+                <div id="question_content{{ question.id }}" style="font-weight: bold; color:#82BF45;">
+                    ▶"{{ question.question_content }}"</div>
                 {% if question.asker == user %}
                     <div id="buttonpanel{{ question.id }}"name="revise">
                         <button type="button" id="{{ question.id }}" class="button revise" value="수정">수정</button>
@@ -87,7 +90,7 @@
                 {% endif %}
 
                 {% if question.question_file.url != None %}
-                    <div><a href="{{ question.question_file.url }}" download="">첨부파일 다운로드 {{ question.question_file }}</a> </div>
+                    <div><a href="{{ question.question_file.url }}" download="" style="color: rgb(236, 155, 3); font-weight: bold;">첨부파일 다운로드 {{ question.question_file }}</a> </div>
                 {% endif %}
             </form>
 
@@ -95,7 +98,7 @@
                 {% csrf_token %}
                 <input type="hidden" name="val" value="answer"/>
                 <input type="hidden" value="{{ question.id }}" name="question_id">
-                <textarea class="answer" name="answer" rows="2" cols="50" placeholder="답변을 입력해주세요."></textarea>
+                <textarea class="answer" name="answer" rows="2" cols="85" placeholder="답변을 입력해주세요."></textarea>
                 <br>
                 <input type="submit" class="button" value="답변" >
             </form>
@@ -109,10 +112,7 @@
         </div>
 
     {% endfor %}
-
-
+    </div>
     </body>
 {% endblock %}
-
-
 </html>
