--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -61,36 +61,37 @@
     <body>
     <h1 style="text-align: center; text-shadow: 4px 2px 2px rgb(172, 171, 171); ">QUESTION <a style="color:#82BF45">&</a> ANSWER</h1>
     <div class="entire">
-        <div class="question_form">
-            <h3 style="color: #D95829; text-align: center;">QUESTION</h3>
-            <h5><a class="user_name">{{ user.name }}</a><a style="color:rgb(236, 155, 3); font-size:medium; font-weight: bold;">님의 질문</a></h5>
+        <div class="question_form" style="margin:13px;">
+            <h3 style="color: #D95829; text-align: center;"><a style="color: black;">{{ user.name }} </a>QUESTION</h3>
+            <input style="font-weight: bold; margin-left: 90%; margin-bottom:10px" class="button" type="submit" value="등록">
             <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <textarea class="question" name="question" rows="10" cols="80" placeholder="질문을 입력해주세요."></textarea><br>
-                <input type="file" name="question_file" style="color : rgb(236, 155, 3); font-size: small; font-weight: bold" multiple>
-                <output id="list"></output>
-                <input style="font-weight: bold" class="button" type="submit" value="등록">
+                <input type="file" name="question_file" style="color: rgba(218, 95, 50, 0.644); font-weight: bold" multiple>
+                <output id="list"></output><br>
             </form>
         </div>
 
         {% for question in questions.all reversed %}
         <div id="{{ question.id }}" class="answer_form">
-            <h4 style="color: #D95829;">ANSWER</h4>
+            <h4 style="color: #D95829;margin-top: 5px; margin-left: 5px;">ANSWER</h4>
             <form action="{% url 'QnA' %}" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="id" value="{{ question.id }}"/>
-                <a style="color : #5653A6; font-weight:bold ;">{{ question.asker }} / {{ question.pub_date }}</a>
-                <div id="question_content{{ question.id }}" style="font-weight: bold; color:#82BF45;">
+                <a style="color : #5653A6; font-weight:bold;margin-top: 5px; margin-left: 5px;">{{ question.asker }} / {{ question.pub_date }}</a>
+                <div id="question_content{{ question.id }}" style="font-weight: bold; color:#82BF45; margin : 10px">
                     ▶"{{ question.question_content }}"</div>
                 {% if question.asker == user %}
-                    <div id="buttonpanel{{ question.id }}"name="revise">
-                        <button type="button" id="{{ question.id }}" class="button revise" value="수정">수정</button>
-                        <button name="submit" type="submit" id="{{ question.id }}" class="button delete" value="삭제">삭제</button>
+                    <div id="buttonpanel{{ question.id }}"name="revise" style="margin-left: 80%;">
+                        <button type="button" id="{{ question.id }}" class="button revise" value="수정" 
+                        style="border-radius: 4px; border:2px rgb(108, 158, 59) solid;  font-weight: bold; font-family: 'Nanum Gothic Coding', monospace; background-color:rgb(232, 247, 217)">수정</button>
+                        <button name="submit" type="submit" id="{{ question.id }}" class="button delete" value="삭제"
+                        style="border-radius: 4px; border:2px rgb(108, 158, 59) solid;  font-weight: bold; font-family: 'Nanum Gothic Coding', monospace; background-color:rgb(232, 247, 217)">삭제</button>
                     </div>
                 {% endif %}
 
                 {% if question.question_file.url != None %}
-                    <div><a href="{{ question.question_file.url }}" download="" style="color: rgb(236, 155, 3); font-weight: bold;">첨부파일 다운로드 {{ question.question_file }}</a> </div>
+                    <div style="margin-left: 10px;"><a href="{{ question.question_file.url }}" download="" style="color: rgba(218, 95, 50, 0.644); font-weight: bold;">첨부파일 다운로드 : {{ question.question_file }}</a> </div>
                 {% endif %}
             </form>
 
@@ -98,14 +99,13 @@
                 {% csrf_token %}
                 <input type="hidden" name="val" value="answer"/>
                 <input type="hidden" value="{{ question.id }}" name="question_id">
-                <textarea class="answer" name="answer" rows="2" cols="85" placeholder="답변을 입력해주세요."></textarea>
-                <br>
-                <input type="submit" class="button" value="답변" >
+                <textarea style="margin:13px"class="answer" name="answer" rows="2" cols="85" placeholder="답변을 입력해주세요."></textarea>
+                <input type="submit" class="button" style="margin-left: 87%; margin-bottom:10px"value="답변" >   
             </form>
 
             {% for answer in question.answers.all %}
-                <div name="comment">
-                    {{ answer.answerer }} )
+                <div name="comment" style="margin:5px; font-weight: bold;">
+                    <a style="color: rgb(235, 164, 33);">【</a>{{ answer.answerer }}<a style="color: rgb(235, 164, 33);">】</a>
                     {{ answer.answer_content }}
                 </div>
             {% endfor %}
