--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -32,7 +32,7 @@
 
                     } else{
                         $('#chkNotice').html('비밀번호 일치합니다.<br><br>');
-                        $('#chkNotice').css('color', '#F27E63');
+                        $('#chkNotice').css('color', '#F23C13');
                     }
                 });
             });
