--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -33,8 +33,8 @@
                     <a class="nav-item nav-link" href="{% url 'homeworklist' %}">Homework</a>
                     <a class="nav-item nav-link" href="{% url 'QnA' %}">QnA</a>
                 {% else %}
-                    <a class="nav-item nav-link active" href="{% url 'home' %}" onclick="loginwarning()">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="{% url 'login' %}" onclick="loginwarning()">Introduce</a>
+                    <a class="nav-item nav-link active" href="{% url 'home' %}" onclick="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="{% url 'login' %}" onclick="{% url 'introduce' %}">Introduce</a>
                     <a class="nav-item nav-link" href="{% url 'login' %}" onclick="loginwarning()">Homework</a>
                     <a class="nav-item nav-link" href="{% url 'login' %}" onclick="loginwarning()">QnA</a>
                 {% endif %}
