--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -7,6 +7,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{% block link %} {% endblock %}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
     <title>{% block title %}{% endblock %}</title>
     <script src="//code.jquery.com/jquery-1.12.4.js"></script>
     <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -21,31 +24,33 @@
 <body>
 {#    <h1>Base.html</h1><hr>#}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">LikeLionCamp</a>
+        <a class="navbar-brand" href="{% url 'home' %}" style="font-family: 'Roboto', sans-serif;color: rgb(253, 165, 0); text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">LIKELION CAMP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav" style="font-family: 'Noto Sans JP', sans-serif;">
                 {% if user.is_authenticated %}
                     <a class="nav-item nav-link active" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="{% url 'introduce' %}">Introduce</a>
-                    <a class="nav-item nav-link" href="{% url 'homeworklist' %}">Homework</a>
-                    <a class="nav-item nav-link" href="{% url 'QnA' %}">QnA</a>
+                    <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
+                    <a class="nav-item nav-link " href="{% url 'homeworklist' %}">Homework</a>
+                    <a class="nav-item nav-link " href="{% url 'QnA' %}">QnA</a>
                 {% else %}
-                    <a class="nav-item nav-link active" href="{% url 'home' %}" onclick="loginwarning()">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="{% url 'login' %}" onclick="loginwarning()">Introduce</a>
-                    <a class="nav-item nav-link" href="{% url 'login' %}" onclick="loginwarning()">Homework</a>
-                    <a class="nav-item nav-link" href="{% url 'login' %}" onclick="loginwarning()">QnA</a>
-                {% endif %}
-
-                {% if user.is_authenticated %}
-                    &nbsp;&nbsp;&nbsp;&nbsp;<label>{{ user.name }}님 환영합니다</label>
-                    <a class="nav-item nav-link" name="logincheck" href="{% url 'logout' %}">로그아웃</a>
-                {% else %}
-                    <a class="nav-item nav-link" name="logincheck" href="{% url 'login' %}">로그인</a>
+                    <a class="nav-item nav-link active " href="{% url 'home' %}" onclick="loginwarning()">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">Introduce</a>
+                    <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">Homework</a>
+                    <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">QnA</a>
                 {% endif %}
             </div>
+                {% if user.is_authenticated %}
+                <a style="font-family: 'Noto Sans KR', sans-serif; margin-left: 50%;">{{ user.name }}님, 환영합니다!</a>
+                <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'logout' %}" style="font-family: 'Noto Sans KR', sans-serif; color: rgb(253, 165, 0);">
+                    로그아웃</a>
+                {% else %}
+                <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'login' %}" style="font-family: 'Noto Sans KR', sans-serif; color: rgb(253, 165, 0);">
+                    로그인</a>
+                {% endif %}
+            
         </div>
     </nav>
 
