--- a/page/templates/parallax.html
+++ b/page/templates/parallax.html
@@ -1,31 +1,22 @@
+{% extends 'base.html' %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Parallax</title>
+    {% block title %}Likelion Camp{% endblock %}
+    {% block link %}{% static 'page/css/parallax.css' %}{% endblock %}
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i'" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../static/page/css/parallax.css">
-
 </head>
+{% block content%}
 <body>
-    <nav id="nav">
-        <h1>WEB'S</h1>
-        <ul>
-            <li><a href="#section1">menu1</a></li>
-            <li><a href="#section2">menu2</a></li>
-            <li><a href="#section3">menu3</a></li>
-            <li><a href="#section4">menu4</a></li>
-            <li><a href="#section5">menu5</a></li>
-            <li><a href="#section6">menu6</a></li>
-        </ul>
-    </nav>
-
     <div id="contents">
-        <div id="section1"><h2>Time is <strong>gold</strong></h2></div>
+        <div id="section1"><h2>안녕 <strong>하세요</strong></h2></div>
         <div id="section2"><h2>Seeing is <strong>believing</strong></h2></div>
         <div id="section3"><h2>Asking costs <strong>nothing</strong></h2></div>
-        <div id="section4"><h2><strong>Better</strong> is to bow than break</h2></div>
+        <div id="section4"><h2><strong>Better</strong> 안녕하세요 </h2></div>
         <div id="section5"><h2><strong>Habit</strong> is second nature</h2></div>
         <div id="section6"><h2>Pain past is <strong>pleasure</strong></h2></div>
     </div>
@@ -48,4 +39,5 @@
     </script>
     <script src="../static/page/js/parallax.js"></script>
 </body>
+{% endblock %}
 </html>
