added thumbnail section

--- a/page/templates/introduce.html
+++ b/page/templates/introduce.html
@@ -23,47 +23,163 @@
                     <ul class="icons">
                         <li><a href="https://www.facebook.com/likelionMJU" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
                         <li><a href="https://www.instagram.com/likelion_mju/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-                        <li><a href="https://github.com/likelionmju" class="icon style2 fa-500px"><span class="label">Github</span></a></li>
+                        <li><a href="https://github.com/likelionmju" class="icon style2 fa-github"><span class="label">Github</span></a></li>
                     </ul>
                 </header>
+                
+                <hr>
 
             <!-- Main -->
                 <section id="main">
-
+                    <h1 style="text-align: center;">운영진</h1>
                     <!-- Thumbnails -->
                         <section class="thumbnails">
+  
                             <div>
-                                <a href="images/fulls/01.jpg">
-                                    <img src="images/thumbs/01.jpg" alt="" />
-                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>김만수 (만파카)</h3>
+                                    <p>응용소프트웨어 18</p>
+                                    <h5>사실은 경영대학 학생임</h5>
                                 </a>
-                                <a href="images/fulls/02.jpg">
-                                    <img src="images/thumbs/02.jpg" alt="" />
-                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>노혜인 (YES혜인)</h3>
+                                    <p>경영정보학과 18</p>
+                                    <h5>모두가 "NO" 라고 말할 때, <br>
+                                        "YES" 외칠 줄 아는 사람.
+                                    </h5>
                                 </a>
                             </div>
                             <div>
-                                <a href="images/fulls/03.jpg">
-                                    <img src="images/thumbs/03.jpg" alt="" />
-                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>김나연</h3>
+                                    <p>응용소프트웨어 17</p>
+                                    <h5>나연</h5>
                                 </a>
-                                <a href="images/fulls/04.jpg">
-                                    <img src="images/thumbs/04.jpg" alt="" />
-                                    <h3>Lorem ipsum dolor sit amet</h3>
-                                </a>
-                                <a href="images/fulls/05.jpg">
-                                    <img src="images/thumbs/05.jpg" alt="" />
-                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>최윤식</h3>
+                                    <p>응용소프트웨어 16</p>
+                                    <h5>윤식</h5>
                                 </a>
                             </div>
                             <div>
-                                <a href="images/fulls/06.jpg">
-                                    <img src="images/thumbs/06.jpg" alt="" />
-                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                <a href="{% static 'page/images/thumbs/김민지.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/김민지.jpg' %}" alt="" />
+                                    <h3>김민지 (백두산호랑이)</h3>
+                                    <p>경영학과 18 <br>
+                                        (경영정보/RPA 복수전공)</p>
+                                    <h5>백두산 정기를 받아 싸우자 ! 이기자 !</h5>
                                 </a>
-                                <a href="images/fulls/07.jpg">
-                                    <img src="images/thumbs/07.jpg" alt="" />
-                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                <a href="{% static 'page/images/thumbs/한준혁.jpeg' %}">
+                                    <img src="{% static 'page/images/thumbs/한준혁.jpeg' %}" alt="" />
+                                    <h3>한준혁 (해롱이)</h3>
+                                    <p>경영학과 15 <br>
+                                        (RPA 복수전공)
+                                    </p>
+                                    <h5>9년차 고양이 집사 ing</h5>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>김지현</h3>
+                                    <p>데이터테크놀로지 18</p>
+                                    <h5>지현</h5>
+                                </a>
+                            </div>
+                        </section>
+
+                        <hr>
+
+                        <h1 style="text-align: center;">부원</h1>
+                    <!-- Thumbnails -->
+                        <section class="thumbnails">
+  
+                            <div>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>곽민아</h3>
+                                    <p>경영정보학과 18</p>
+                                    <h5>민아</h5>
+                                </a>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>김유비</h3>
+                                    <p>응용소프트웨어 20</p>
+                                    <h5>유비</h5>
+                                </a>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>엄예빈</h3>
+                                    <p>경영학과 18</p>
+                                    <h5>예빈</h5>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>곽진아</h3>
+                                    <p>정보통신공학과 16</p>
+                                    <h5>진아</h5>
+                                </a>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>김예빈</h3>
+                                    <p>미술사학과 19<br>
+                                        (경영정보 복수전공)
+                                    </p>
+                                    <h5>예빈</h5>
+                                </a>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>이소윤</h3>
+                                    <p>경영학과 18 <br>
+                                        (경영정보 복수전공)
+                                    </p>
+                                    <h5>소윤</h5>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="{% static 'page/images/thumbs/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>김도영</h3>
+                                    <p>응용소프트웨어 19</p>
+                                    <h5>도영</h5>
+                                </a>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>김현빈</h3>
+                                    <p>미술사학과 20</p>
+                                    <h5>현빈</h5>
+                                </a>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>정가현</h3>
+                                    <p>숭실대 전자정보학부 18</p>
+                                    <h5>가현</h5>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>김승현</h3>
+                                    <p>데이터테크놀로지 16</p>
+                                    <h5>승현</h5>
+                                </a>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>박성제</h3>
+                                    <p>응용소프트웨어 18</p>
+                                    <h5>성제</h5>
+                                </a>
+                                <a href="{% static 'page/images/fulls/02.jpg' %}">
+                                    <img src="{% static 'page/images/thumbs/02.jpg' %}" alt="" />
+                                    <h3>조환희</h3>
+                                    <p>사회과학부 20</p>
+                                    <h5>환희</h5>
                                 </a>
                             </div>
                         </section>
@@ -72,7 +188,8 @@
 
             <!-- Footer -->
                 <footer id="footer">
-                    <p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+                    <p>&copy; MJU X LIKELION 8th. <br>
+                        All rights reserved.</p>
                 </footer>
 
         </div>
