--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -6,7 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Likelion Camp</title>
+    {% block link %}{% static 'homework/css/homeworklist.css' %}{% endblock %}
+    {% block title %}Likelion Camp{% endblock %}
 </head>
 {% block content%}
 <body>
